--- a/src/components/search/index.less
+++ b/src/components/search/index.less
@@ -9,3 +9,17 @@
 .margin-bottom-10 {
     margin-bottom: 10px;
 }
+
+.outer-search-container {
+    display: block;
+    margin: 0 20px;
+}
+
+.inner-search-container {
+    display: flex;
+    flex: 1;
+    width: auto;
+    margin: 0 auto 20px auto;
+    max-width: 736px;
+    overflow: hidden;
+}
