--- a/src/components/search/index.less
+++ b/src/components/search/index.less
@@ -1,5 +1,5 @@
-.width-80 {
-    width: 80%;
+.width-70 {
+    width: 70%;
 }
 
 .margin-right-10 {
@@ -22,4 +22,5 @@
     margin: 0 auto 20px auto;
     max-width: 736px;
     overflow: hidden;
+    height: 35px;
 }
