--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -359,6 +359,10 @@ p{
   padding-bottom:10px;
 }
 
+.pt-10{
+  padding-top:10px;
+}
+
 .adm-tabs-tab.adm-tabs-tab-active{
   font-size: 16px;
   font-weight: bold;
