--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -1,5 +1,5 @@
 @import '../common.less';
-.beta-tag{
+.beta-tag {
     color: var(--theme-text-color);
     // background-color: #0d111c;
     font-size: 10px;
@@ -8,3 +8,7 @@
     line-height: 1;
     border-radius: 4px;
 }
+
+// b {
+//     font-weight: normal;
+// }
