--- a/src/components/search/cse.less
+++ b/src/components/search/cse.less
@@ -17,3 +17,21 @@ b {
     color: #4d5156 !important;
     line-height: 20px;
 }
+
+.gs-result .gs-image, .gs-result .gs-promotion-image {
+    border: 0 !important;
+}
+
+.gs-web-image-box .gs-image, .gs-promotion-image-box .gs-promotion-image {
+    border: 0 !important;
+}
+
+.gs-web-image-box, .gs-promotion-image-box {
+    padding: 0 !important;
+}
+
+.gs-promotion-image-box, .gs-image-box.gs-web-image-box.gs-web-image-box-portrait, .gs-image-box.gs-web-image-box.gs-web-image-box-landscape {
+    border-radius: 8px;
+    overflow: hidden;
+    border: 1px solid #e2e2e2;
+}
