--- a/src/components/search/cse.less
+++ b/src/components/search/cse.less
@@ -33,5 +33,5 @@ b {
 .gs-promotion-image-box, .gs-image-box.gs-web-image-box.gs-web-image-box-portrait, .gs-image-box.gs-web-image-box.gs-web-image-box-landscape {
     border-radius: 8px;
     overflow: hidden;
-    border: 1px solid #e2e2e2;
+    // border: 1px solid #e2e2e2;
 }
