--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -9,6 +9,66 @@
     border-radius: 4px;
 }
 
-// b {
-//     font-weight: normal;
-// }
+.website-container {
+    grid-gap: 20px 10px;
+    display: grid;
+    gap: 20px 10px;
+    grid-template-columns: 1fr 1fr;
+    margin: 20px auto;
+}
+
+.list-item {
+    align-items: center;
+    display: flex;
+    text-decoration: none;
+}
+
+.list-item .list-item-logo {
+    flex: none;
+    width: 40px;
+}
+
+.adm-image-img {
+    height: 100%;
+    width: 100%;
+}
+
+.list-item .list-item-content {
+    flex: 1 1;
+    font-size: 14px;
+    padding-left: 10px;
+    width: 0;
+}
+
+.list-item .list-item-content .desc {
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    font-size: 10px;
+    line-height: 11px;
+    margin-top: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+}
+
+@media (prefers-color-scheme: light) {
+    .list-item-content{
+      .desc{
+        color: #999999;
+      }
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .list-item-content{
+      .desc{
+        color: #666666;
+      }
+    }
+    .list-item{
+      .block{
+        color: #cccccc;
+      }
+    }
+}
