--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -14,7 +14,7 @@
     display: grid;
     gap: 20px 10px;
     grid-template-columns: 1fr 1fr;
-    margin: 20px auto;
+    padding: 20px 0px;
 }
 
 .list-item {
