--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -15,6 +15,8 @@
     gap: 20px 10px;
     grid-template-columns: 1fr 1fr;
     padding: 20px 0px;
+    overflow: scroll;
+    max-height: 160px;
 }
 
 .list-item {
