--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -33,14 +33,15 @@
   padding: 20px 0px;
   overflow: hidden;
   max-height: 160px;
-  min-width: 320px;
+  min-width: 380px;
+  margin-right: 10px;
 }
 
 .list-item {
     align-items: center;
     display: flex;
     text-decoration: none;
-    min-width:186px;
+    min-width:180px;
 }
 
 .list-item .list-item-logo {
