--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -26,22 +26,22 @@
 }
 
 .website-sub-container {
-  grid-gap: 20px 10px;
-  display: grid;
-  gap: 20px 10px;
-  grid-template-columns: 1fr 1fr;
-  padding: 20px 0px;
-  overflow: hidden;
-  max-height: 160px;
-  min-width: 100vw;
-  margin-right: 10px;
+    grid-gap: 20px 10px;
+    display: grid;
+    gap: 20px 10px;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px 0px;
+    overflow: hidden;
+    max-height: 160px;
+    min-width: 100vw;
+    padding-right: 10px;
 }
 
 .list-item {
     align-items: center;
     display: flex;
     text-decoration: none;
-    min-width:180px;
+    min-width:calc((100vw - 20px)/2);
 }
 
 .list-item .list-item-logo {
