--- a/src/pages/web3site/index.less
+++ b/src/pages/web3site/index.less
@@ -23,6 +23,7 @@
     display: grid;
     grid-auto-flow: column;
     overflow: scroll;
+    gap: 10px;
 }
 
 .website-sub-container {
@@ -33,15 +34,14 @@
     padding: 20px 0px;
     overflow: hidden;
     max-height: 160px;
-    min-width: 100vw;
-    padding-right: 10px;
+    min-width: calc(100vw - 2em - 10px);
 }
 
 .list-item {
     align-items: center;
     display: flex;
     text-decoration: none;
-    min-width:calc((100vw - 20px)/2);
+    max-width:calc((100vw - 2em - 30px)/2);
 }
 
 .list-item .list-item-logo {
