feat: add download buuton to chome web store result

--- a/src/components/search/cse.less
+++ b/src/components/search/cse.less
@@ -39,3 +39,14 @@ b {
 .gsc-search-button-v2 {
     border: 2px solid #4d90fe !important;
 }
+
+.crx-download button {
+    background-color: #ffffff;
+    border: none;
+    margin-top: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: #4d90fe;
+}
