--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -33,7 +33,6 @@
     grid-template-columns: 1fr 1fr;
     padding: 20px 0px;
     overflow: hidden;
-    max-height: 160px;
     min-width: calc(100vw - 2em - 10px);
 }
 
@@ -61,8 +60,21 @@
     width: 0;
 }
 
+
+.list-item .list-item-content .type {
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  font-size: 10px;
+  line-height: 10px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+
+.list-item .list-item-content svg {
+  vertical-align:text-bottom;
+}
+
 .list-item .list-item-content .desc {
-    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     display: -webkit-box;
     font-size: 10px;
