feat: add ve search

--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -22,7 +22,8 @@
 .website-outer-container {
     display: grid;
     grid-auto-flow: column;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     gap: 10px;
 }
 
